Reworking the database schema, and may rework it further to  better suit the application. No longer using ReferenceField, programatically linking User and Book collections. 'members.html' now loads the books added by the user in MaterializeCSS 1.0.0 collapsible popouts, with functions to delete with a modal ("Are you sure you wish to delete this book?"), and with a rudmentary edit book function. Improved the breadcrumb styling in 'members.html'. Will need to update the rest of the HTML templates. 'edit_book.html' is a placeholder for now, as the edit_book function uses render_template_string for now. 'style.css', sdded z-index to page-footer and footer-copyright to make sure the body content scrolls underneath the footer. Styling of matterial icons for the viewwing, editing, and deleting of books in 'members.html'.

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -53,6 +53,11 @@ footer {
     box-shadow: 0 -2px 0 rgba(0, 0, 0, 0.14), 0 -3px 1px 0 rgba(0, 0, 0, 0.12), 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
+.page-footer, .footer-copyright {
+    padding: 0px;
+    z-index: 10;
+}
+
 #menu_book {
     transform: scale(1.2);
     padding: 0px 2px;
